data ingestion phase is done

--- a/notebooks/experiment.ipynb
+++ b/notebooks/experiment.ipynb
@@ -78,8 +78,112 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "ada44894",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "df=pd.read_csv('../experiment.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "e438ac12",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>dialog</th>\n",
+       "      <th>act</th>\n",
+       "      <th>emotion</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>['Say , Jim , how about going for a few beers ...</td>\n",
+       "      <td>[3 4 2 2 2 3 4 1 3 4]</td>\n",
+       "      <td>[0 0 0 0 0 0 4 4 4 4]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>['Can you do push-ups ? '\\n \" Of course I can ...</td>\n",
+       "      <td>[2 1 2 2 1 1]</td>\n",
+       "      <td>[0 0 6 0 0 0]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>['Can you study with the radio on ? '\\n ' No ,...</td>\n",
+       "      <td>[2 1 2 1 1]</td>\n",
+       "      <td>[0 0 0 0 0]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>['Are you all right ? '\\n ' I will be all righ...</td>\n",
+       "      <td>[2 1 1 1]</td>\n",
+       "      <td>[0 0 0 0]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>['Hey John , nice skates . Are they new ? '\\n ...</td>\n",
+       "      <td>[2 1 2 1 1 2 1 3 4]</td>\n",
+       "      <td>[0 0 0 0 0 6 0 6 0]</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                              dialog                    act  \\\n",
+       "0  ['Say , Jim , how about going for a few beers ...  [3 4 2 2 2 3 4 1 3 4]   \n",
+       "1  ['Can you do push-ups ? '\\n \" Of course I can ...          [2 1 2 2 1 1]   \n",
+       "2  ['Can you study with the radio on ? '\\n ' No ,...            [2 1 2 1 1]   \n",
+       "3  ['Are you all right ? '\\n ' I will be all righ...              [2 1 1 1]   \n",
+       "4  ['Hey John , nice skates . Are they new ? '\\n ...    [2 1 2 1 1 2 1 3 4]   \n",
+       "\n",
+       "                 emotion  \n",
+       "0  [0 0 0 0 0 0 4 4 4 4]  \n",
+       "1          [0 0 6 0 0 0]  \n",
+       "2            [0 0 0 0 0]  \n",
+       "3              [0 0 0 0]  \n",
+       "4    [0 0 0 0 0 6 0 6 0]  "
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c95d325f",
    "metadata": {},
    "outputs": [],
    "source": []
